<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".loginpage.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconapp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="#554B4D"
        android:textColorHint="#554B4D" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#554B4D"
        android:textColorHint="#554B4D" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#F28F8F"
        android:text="@string/login"
        android:textColor="#554B4D"/>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="180dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="#554B4D"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iconapp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/iconapp"
        android:contentDescription="@string/icon_app" />

    <TextView
        android:id="@+id/orlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/or_login_with"
        android:textColor="#554B4D"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/loginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F1CDD4"
        android:contentDescription="@string/google_logo"
        android:src="@drawable/googlelogo"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/orsignupwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginGoogle"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:text="@string/or_sign_up_with"
        android:textColor="#554B4D"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/signupstr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orsignupwith"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up_str"
        android:textColor="#554B4D"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>